# Herencia

./: CMakeLists.txt  Comandante.cpp  Comandante.h  Filosofo.cpp  Filosofo.h  General.cpp  General.h  Guerrero.cpp  Guerrero.h  Persona.cpp  Persona.h  main.cpp
